# spec-kit-worktree

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/bash/: common.sh  create-worktree.sh  list-worktrees.sh  remove-worktree.sh  update-agent-context.sh  worktree-common.sh
scripts/powershell/: Create-Worktree.ps1  List-Worktrees.ps1  Remove-Worktree.ps1  Worktree-Common.ps1  check-prerequisites.ps1  common.ps1  setup-plan.ps1  update-agent-context.ps1
src/specify_cli/: __init__.py
templates/: speckit-standards-template.md
templates/commands/: analyze.md  checklist.md  constitution.md  specify.md  tasks.md
templates/commands.backup/: analyze.md  clarify.md  implement.md  plan.md  tasks.md  taskstoissues.md
templates/worktree-commands/: implement.md  plan.md
