[project]
name = "specify-worktree-cli"
version = "0.0.23"
description = "Spec-Kit-Worktree CLI - 规范驱动开发(SDD)工具包，支持项目初始化、git worktree管理和特性分支创建等功能"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify-worktree = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

